# cmhistory

./: .gitignore  CHANGELOG.md  Datenmodell.md  FABLE.md  LICENSE  NOTICE.md  PRD_Cardmarket_Dashboard.md  README.md  pyproject.toml
.github/workflows/: ci.yml
OUTPUT/: MVP_IMPLEMENTATION_PLAN.md  PRD_FEASIBILITY_REVIEW.md  PROJECT_AUDIT_AND_OPTIMIZATION.md
docs/: architecture.md  monthly_import.md
docs/releases/: v1.0.0.md
docs/wiki/: Betrieb-und-Konfiguration.md  Cardmarket-Exporte.md  Dashboard-und-Reports.md  Datenschutz-und-Backups.md  Erster-Datenbankaufbau.md  Fehlerbehebung.md  Home.md  Installation.md  Monatlicher-Import.md  Release-v1.0.0.md  _Footer.md  _Sidebar.md
migrations/: 001_init.sql  003_directional_shipment_identity.sql
scripts/: verify_distribution.py  verify_mvp.ps1
src/cm_dashboard/: __init__.py  _compat.py  cli.py  config.py  db.py
src/cm_dashboard/importing/: __init__.py  accepted_issues.py  article_import.py  deduplication.py  filename.py  normalize.py  pipeline.py  raw_store.py  readers.py  schemas.py  shipment_grouping.py  shipment_import.py  source_scan.py  validation.py  version.py
src/cm_dashboard/migrations/: 001_init.sql  002_import_normalization_version.sql  003_directional_shipment_identity.sql  004_article_lines_shipment_index.sql
src/cm_dashboard/reporting/: __init__.py  queries.py
src/cm_dashboard/web/: __init__.py  app.py
src/cm_dashboard/web/static/: app.css  app.js
tests/: __init__.py  conftest.py  fixtures.py  fixtures_manifest.md  synthetic_sources.py  test_article_import.py  test_article_shipment_linking.py  test_articles_page.py  test_cli.py  test_config.py  test_dashboard_page.py  test_database_rebuild.py  test_deduplication.py  test_distribution_verifier.py  test_filename_parser.py  test_fixtures_manifest.py  test_full_source_smoke.py  test_idempotent_import.py  test_import_pipeline.py  test_import_status_page.py  test_import_validation.py  test_normalize.py  test_package_version.py  test_period_report_export.py  test_privacy_masking.py  test_product_detail_page.py  test_public_notice.py  test_raw_store.py  test_readers.py  test_reporting_queries.py  test_schema.py  test_shipment_detail_page.py  test_shipment_grouping.py  test_shipment_import.py  test_shipments_page.py  test_source_scan.py  test_source_schemas.py  test_verify_script_documented.py  test_web_app.py  test_wiki_documentation.py  (+1 more)
(+10 files in other folders)
