[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cm-dashboard"
version = "0.1.0"
description = "Local Cardmarket sales and purchase dashboard"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1.0",
    "jinja2>=3.1,<4.0",
    "python-calamine>=0.7,<1.0",
    "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.3,<2.0",
    "httpx2>=2.5,<3.0",
    "mypy>=1.20,<2.0",
    "pip-audit>=2.9,<3.0",
    "pytest>=9.0.3,<10.0",
    "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cm_dashboard = [
    "py.typed",
    "migrations/*.sql",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/*.svg",
    "web/templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src", "scripts", "tests"]
explicit_package_bases = true
mypy_path = ["src"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Tests lean on untyped pytest fixtures (tmp_path, capsys, monkeypatch);
# their bodies are still checked via check_untyped_defs.
module = "tests.*"
disallow_incomplete_defs = false
